--- a/assets/style.css
+++ b/assets/style.css
@@ -1,167 +1,100 @@
-body 
-{
-    margin: 0;
-    padding: 0;
-    background-color: rgb(10,10,11);
-    overflow-y: hidden;
-    overflow-x: hidden;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+
+::-webkit-scrollbar {
+    width: 0;
 }
 
-#particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+:root {
+    --background: #0a0b0c;
+    --secondary-background: #0f1013;
+    --main-color: rgb(120, 29, 194);
+    --main-hover-color: rgb(120, 29, 194);
 }
 
-.container_main
-{
-    visibility: hidden;
-    background-color: rgba(0,0,0,0);
-    width: 300px;
-    height: 175px;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+body {
+  overflow: hidden; /* Hide scrollbars */
+  transition: opacity 4s ease-out; 
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  margin: 0;
+  background-color: var(--background);
 }
 
-.container_init
-{
-    background-color: rgba(0,0,0,0);
-    width: 300px;
-    height: 175px;
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+.bg {
+    background-color: var(--background);
+}
+.dg {
+    background-color: var(--secondary-background);
+}
+.maincol-bg {
+    background-color: var(--main-color);
+}
+.maincol-bg-hover {
+    background-color: var(--main-hover-color);
+}
+.maincol-txt {
+    color: var(--main-color);
+}
+.maincol-txt-hover {
+    color: var(--main-hover-color);
+}
+.fnt {
+    font-family: 'Nunito Sans', sans-serif;
+}
+.cstWH {
+    height: 6rem;
+    width: 11rem;
+}
+.content {
+    max-width: 70rem;
+    margin-inline: auto;
+}
+.cstFNTSZ {
+    font-size: 0.6rem;
+}
+.cstShdw {
+    box-shadow: 0px 3px 0px 0px black;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    transition: 0.2s linear;
 }
 
-.container_main ul
-{
-    color: rgb(255,255,255);
-    list-style: none;
-    padding: 5px;
-    margin-top: 5px;
-    text-align: center;
-    user-select: none;
+.cstShdw:focus {
+    outline: none; 
 }
 
-.container_main a[href] 
-{
-    color: #fff;
-    text-decoration: none;
-    font-family: monospace;
-    font-size: 13px;
-    padding: 5px;
-    user-select: none;
+.cstShdw:hover {
+    box-shadow: 0px 3px 0px 0px var(--main-color);
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+}
+.cstHegt {
+    height: 7rem;
+}
+.cstHegt2 {
+    height: 14rem;
 }
 
-.container_main a[href]:hover
-{
-    color: rgb(170, 55, 255);
-    text-decoration: underline;
-    font-family: monospace;
-    font-size: 13px;
-    padding: 5px;
-}
-
-.container_main img
-{
-    width: 100px;
-    height: 100px;
+.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
-    filter: brightness(10%) sepia(1) saturate(100) hue-rotate(275deg) drop-shadow(0 0 10px #aa37ff);
-    position: relative;
-    user-select: none;
+    width: 10%;
+  }
+
+.image-opacity {
+    -webkit-filter: blur(3px);
+    filter: blur(3px);
 }
 
-.title, .title:link, .title:active, .title:visited
-{
-    color: rgb(170, 55, 255) !important;
-    font-family: monospace;
-    font-style: normal;
-    font-size: 17px;
-    text-shadow: 0 0 8px #aa37ff;
-    user-select: none;
+.Active {
+    box-shadow: 0px 3px 0px 0px var(--main-color);
 }
 
-.box 
-{
-    background: rgb(8,8,8);
-    width: 300px;
-    height: 175px;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(170, 55, 255);
-    background-color: rgb(8,8,13);
+.Active:focus {
+    outline: none; 
 }
-
-.box h1
-{
-    color: rgb(170, 55, 255);
-    font-family: monospace;
-    font-style: normal;
-    font-weight: 5;
-    font-size: 15px;
-}
-
-.box input[type="text"], .box input[type="password"], .box input[type="submit"]
-{
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(170, 55, 255);
-    background-color: rgb(15,15,15);
-    font-family: monospace;
-    font-style: normal;
-    font-weight: lighter;
-    text-align: center;
-    color:#fff;
-    display: block;
-    margin: 10px auto;
-    width: 200px;
-    box-sizing: border-box;
-}
-
-.box input[type="text"]:focus, .box input[type="password"]:focus
-{
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(170, 55, 255);
-    background-color: rgb(15,15,15);
-    font-family: monospace;
-    font-style: normal;
-    font-weight: lighter;
-    text-align: center;
-    color:#fff;
-    display: block;
-    margin: 10px auto;
-    width: 200px;
-    outline-width: 0;
-    box-sizing: border-box;
-}
-
-/* 
-@keyframes title-glow 
-{
-    from {
-        text-shadow: 0 0 15px #c471ff;
-    }
-    to {
-        text-shadow: 0 0 8px #aa37ff;
-    }
-} */
